kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-koa
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: api-koa
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: api-koa
    spec:
      containers:
      - env:
        - name: OMDB_API_KEY
          value: 9f6ac5fb
        image: eu.gcr.io/tvshow-rating/api
        imagePullPolicy: Always
        name: api-koa
        ports:
        - containerPort: 8001
          protocol: TCP
