kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-koa-i
  annotations:
    kubernetes.io/ingress.global-static-ip-name: api-koa-ip
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
    - hosts:
      - api.wsg.msroed.app
      secretName: api-koa-tls
  rules:
    - host: api.wsg.msroed.app
      http:
        paths:
        - path: /*
          backend:
            serviceName: api-koa-service
            servicePort: 8001
